// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kusama Coretime Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "callHash": "(hash)",
      "multisig": "EF9xmEeFv3nNVM3HyLAMTV5TU8jua5FRXCE116yfbbrZbCL",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "callHash": "(hash)",
      "multisig": "EF9xmEeFv3nNVM3HyLAMTV5TU8jua5FRXCE116yfbbrZbCL",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "callHash": "(hash)",
      "multisig": "EF9xmEeFv3nNVM3HyLAMTV5TU8jua5FRXCE116yfbbrZbCL",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "callHash": "(hash)",
      "multisig": "EF9xmEeFv3nNVM3HyLAMTV5TU8jua5FRXCE116yfbbrZbCL",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "callHash": "(hash)",
      "multisig": "EF9xmEeFv3nNVM3HyLAMTV5TU8jua5FRXCE116yfbbrZbCL",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Dave rejects the announced call 1`] = `[]`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "callHash": "(hash)",
      "multisig": "G4XYbETDc2iCRqH1ZEjVsSvP91TGHDmzu5MK8e7swf35hWj",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "FypXB3LoZ58365A55uSJLfsieaFwnBWTQixqdZS9A8EFndZ",
      "callHash": "(hash)",
      "multisig": "G4XYbETDc2iCRqH1ZEjVsSvP91TGHDmzu5MK8e7swf35hWj",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "callHash": "(hash)",
      "multisig": "GxSVGLFHA3AsVfzcY98xTZoj5xtoBFREJtL2RF4dKgbzeLR",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "E7G4vvpcNBQNzrj6q1oaQgqxBWzH8G1sWjefvtmFtr7KvU3",
      "callHash": "(hash)",
      "multisig": "GxSVGLFHA3AsVfzcY98xTZoj5xtoBFREJtL2RF4dKgbzeLR",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > 2-of-3 multisig with pure proxy multisig > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "callHash": "(hash)",
      "multisig": "CjZ86z3bUcxuvUXYxT7oKikzbuqEevS7kbqAHc1wewg6zn2",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Coretime Multisig Proxy > success tests > Cancel 2-of-3 multisig with pure proxy before any other approvals > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "H4QCDJK76LSwsmXt8Ct4YbRSBEUA94cRUJ5u3geiq1Hj4EB",
      "callHash": "(hash)",
      "multisig": "F5Uieeea8Veb7SNHMHCv9rmZ8yEuL949P3F9TbvvU9Eehb5",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;
